--- a/css/style.css
+++ b/css/style.css
@@ -329,6 +329,20 @@ header nav ul li a, header nav ul li .footer_wrapper p, .footer_wrapper header n
   background: #d9dadc;
   height: 4px;
   border-radius: 10px;
+  margin: 0 17px;
+}
+
+#diamondsearch #ds_filter .ui-slider .dot {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 30;
+}
+
+#diamondsearch #ds_filter .ui-slider .dot li {
+  height: 100%;
+  width: 2px;
+  background: #e4e4e4;
 }
 
 #diamondsearch #ds_filter .ui-slider .ui-slider-handle {
