--- a/sass/templates/_bellagio.scss
+++ b/sass/templates/_bellagio.scss
@@ -146,16 +146,15 @@ header {
       margin: 0;
       width: 78%;
       height: inherit;
-      line-height: 40px;
+      line-height: 20px;
       padding: 0 0 0 7px;
       color: #2c2c2c;
       border-bottom: 1px solid #dfdfdf;
-      display: none;
-
+      font-size: 11px;
       @include breakpoint($medium) {
         font-size: 15px;
         padding: 0 0 0 20px;
-        display: block;
+        line-height: 40px;
 
       }
 
@@ -181,12 +180,10 @@ header {
       border-left: 1px solid #dfdfdf;
       text-align: center;
       letter-spacing: 1px;
-      line-height: 40px;
+      line-height: 20px;
       cursor: pointer;
       color: #2c2c2c;
       font-weight: 500;
-      display: none;
-
       i {
         margin-left: 5px;
         color: $primary-color;
@@ -195,7 +192,7 @@ header {
       @include breakpoint($medium) {
         font-size: 14px;
         padding: 0 0 0 20px;
-        display: block;
+        line-height: 40px;
 
       }
 
@@ -221,15 +218,21 @@ header {
 
   #ds_filter {
     display: none;
-    height: 550px;
+    min-height: 550px;
     width: 100%;
     position: absolute;
-    top: 60px;
+    top: 20px;
     left: 0;
     padding: 20px 35px;
     background: $white-color;
     box-shadow: 0px 5px 10px rgba(165, 175, 179, 0.326);
     z-index: 2;
+
+    @include breakpoint($medium) {
+ 
+      top: 60px;
+
+    }
 
     .ui-slider {
       background: $dark-grey-color;
