--- a/css/style.css
+++ b/css/style.css
@@ -574,6 +574,7 @@ header nav ul li a, header nav ul li .footer_wrapper p, .footer_wrapper header n
   -o-transition: color .25s;
   transition: color .25s;
   font-size: 10px;
+  text-transform: uppercase;
 }
 
 @media (min-width: 576px) {
@@ -772,6 +773,19 @@ header nav ul li a, header nav ul li .footer_wrapper p, .footer_wrapper header n
   background: #1f4c8c;
   position: relative;
   max-width: 195px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+#diamondsearch #diamond_preview .left_side .diamond_img img {
+  max-height: 50%;
 }
 
 #diamondsearch #diamond_preview .left_side .diamond_img::before {
