--- a/sass/templates/_bellagio.scss
+++ b/sass/templates/_bellagio.scss
@@ -144,7 +144,7 @@ header {
     h1 {
       font-weight: bold;
       margin: 0;
-      width: 78%;
+      width: 70%;
       height: inherit;
       line-height: 20px;
       padding: 0 0 0 7px;
@@ -155,7 +155,7 @@ header {
         font-size: 15px;
         padding: 0 0 0 20px;
         line-height: 40px;
-
+        width: 78%;
       }
 
       @include breakpoint($large) {
@@ -176,7 +176,7 @@ header {
     }
 
     #filterSlideToggleBtn {
-      width: 22%;
+      width: 30%;
       border-left: 1px solid #dfdfdf;
       text-align: center;
       letter-spacing: 1px;
@@ -202,7 +202,7 @@ header {
         font-size: 14px;
         padding: 0 0 0 20px;
         line-height: 40px;
-
+        width: 22%;
       }
 
       @include breakpoint($large) {
@@ -230,13 +230,18 @@ header {
     min-height: 550px;
     width: 100%;
     position: absolute;
-    top: 20px;
+    top: 40px;
     left: 0;
     padding: 20px 35px;
     background: $white-color;
     box-shadow: 0px 5px 10px rgba(165, 175, 179, 0.326);
     z-index: 2;
 
+    @include breakpoint($small) {
+ 
+      top: 20px;
+
+    }
     @include breakpoint($medium) {
  
       top: 60px;
@@ -437,7 +442,7 @@ header {
 
     thead {
       box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.10);
-
+      border-bottom: 1px solid $dark-grey-color;
       th:first-child .sort {
         border: 0 none;
       }
@@ -513,10 +518,27 @@ header {
     th.cut_short {
       display: none;
 
-      @include breakpoint(388px) {
+      @include breakpoint($small) {
         display: table-cell;
       }
     }
+
+    td.polish {
+      display: none;
+
+      @include breakpoint($medium) {
+        display: table-cell;
+      }
+    }
+
+    td.symmetry {
+      display: none;
+
+      @include breakpoint($medium) {
+        display: table-cell;
+      }
+    }
+
   }
 
   .search_fotter {
@@ -553,7 +575,7 @@ header {
       .pgBtn {
         display: inline-block;
         color: #3a3a3a;
-        font-size: 14px;
+        font-size: 11px;
         text-align: center;
         min-width: 28px;
         padding: 0 4px;
@@ -561,7 +583,10 @@ header {
         line-height: 28px;
         cursor: pointer;
         user-select: none;
+        @include breakpoint($small){
+          font-size: 14px;
 
+        }
       }
 
       .disabled {
